force-app/main/default/objects/vlocity_cmt__Error_Code__c/vlocity_cmt__Error_Code__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED. Use ErrorCode__c</description>
    <label>Error Code</label>
    <nameField>
        <label>Error Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>