force-app/main/default/objects/vlocity_cmt__Error_Code__c/fields/vlocity_cmt__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Error_Code__c</fullName>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>