force-app/main/default/objects/vlocity_cmt__Error_Code__c/fields/vlocity_cmt__Namespace__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Namespace__c</fullName>
    <label>Namespace</label>
    <referenceTo>vlocity_cmt__Error_Code_Namespace__c</referenceTo>
    <relationshipLabel>Error Codes</relationshipLabel>
    <relationshipName>Namespace</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>